fix(collapsible-section): make long section title truncate
Before this fix, long titles would destroy the UI and misplace the actions menu

--- a/src/components/collapsible-section/partial-styles/expand-icon.scss
+++ b/src/components/collapsible-section/partial-styles/expand-icon.scss
@@ -3,6 +3,8 @@
     height: pxToRem(30);
     margin: 0 pxToRem(16) 0 pxToRem(8);
     width: pxToRem(12);
+
+    flex-shrink: 0;
 }
 
 .expand-icon__line {
